add 2nd section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
             <strong>This website is awesome</strong>
             </div>
             <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+        <div class="image"><img src="placeholder.png"></div>
+    </div>
+    <div class="info">
+        <div class="header2">
+            <div class="infoimage">
+                <img src="placeholder1.png" alt="placeholder1">
+                <div class="infotext">Placeholder 1 text</div>
+            </div>
+            <div class="infoimage">
+                <img src="placeholder2.png" alt="placeholder2">
+                <div class="infotext">Placeholder 2 text</div>
+            </div>
+            <div class="infoimage">
+                <img src="placeholder3.png" alt="placeholder3">
+                <div class="infotext">Placeholder 3 text</div>
+            </div>
+            <div class="infoimage">
+                <img src="placeholder4.png" alt="placeholder4">
+                <div class="infotext">Placeholder 4 text</div>
+            </div>
         </div>
     </div>
 </body>
