--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="image"><img src="placeholder.png"></div>
     </div>
     <div class="info">
-        <div class="header2">
+        <div class="infoheader">
             <div class="infoimage">
                 <img src="placeholder1.png" alt="placeholder1">
                 <div class="infotext">Placeholder 1 text</div>
@@ -45,6 +45,19 @@
                 <div class="infotext">Placeholder 4 text</div>
             </div>
         </div>
+    </div>
+    <div class="quote">
+        <div class="quoteblock">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="quotesign">-Thor, God of Thunder</div>
+    </div>
+    <div class="signup">
+        <div class="signupheader">
+            Call to action! It's time!
+        </div>
+        <div class="signupinfo">
+            Sign up for our product by clicking that button over there!
+        </div>
+        <button class="signup" type="button">Sign up</button>
     </div>
 </body>
 </html>
