--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
         </div>
         <button class="signup" type="button">Sign up</button>
     </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
 </html>
