--- a/index.html
+++ b/index.html
@@ -21,30 +21,32 @@
         </div>
         <div class="left-text">
             <div class="hero">
-            <strong>This website is awesome</strong>
+            This website is awesome
             </div>
             <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
         <div class="image"><img src="placeholder.png"></div>
     </div>
     <div class="info">
         <div class="infoheader">
-            <div class="infoimage">
+            Some random information.
+        </div>
+         <div class="infoimage">
                 <img src="placeholder1.png" alt="placeholder1">
                 <div class="infotext">Placeholder 1 text</div>
-            </div>
-            <div class="infoimage">
+        </div>
+        <div class="infoimage">
                 <img src="placeholder2.png" alt="placeholder2">
                 <div class="infotext">Placeholder 2 text</div>
-            </div>
-            <div class="infoimage">
+        </div>
+        <div class="infoimage">
                 <img src="placeholder3.png" alt="placeholder3">
                 <div class="infotext">Placeholder 3 text</div>
-            </div>
-            <div class="infoimage">
+        </div>
+        <div class="infoimage">
                 <img src="placeholder4.png" alt="placeholder4">
                 <div class="infotext">Placeholder 4 text</div>
-            </div>
         </div>
+    
     </div>
     <div class="quote">
         <div class="quoteblock">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
@@ -57,7 +59,7 @@
         <div class="signupinfo">
             Sign up for our product by clicking that button over there!
         </div>
-        <button class="signup" type="button">Sign up</button>
+        <button class="signupbutton" type="button">Sign up</button>
     </div>
     <div class="footer">
         Copyright © The Odin Project 2021
