fix links in the header perhaps

--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
         </div>
         <div class="links">
             <ul>
-                <li> <a href="google.com">header link one</a></li>
-                <li> <a href="google.com">header link two</a></li>
-                <li> <a href="google.com">header link three</a></li>
+                <li> <a href="https://google.com">header link one</a></li>
+                <li> <a href="https://google.com">header link two</a></li>
+                <li> <a href="https://google.com">header link three</a></li>
             </ul>
         </div>
+    </div>
+    <div class="heroheader">
         <div class="left-text">
             <div class="hero">
             This website is awesome
             </div>
             <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
         <div class="image"><img src="placeholder.png"></div>
+        </div>
     </div>
     <div class="info">
         <div class="infoheader">
