--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             This website is awesome
             </div>
             <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-            <button class="headerbutton" type="button">Sign up</button>
+            <button class="headerbutton" type="button"><strong>Sign up</strong></button>
         <div class="splashimage"><img src="placeholder.png"></div>
         </div>
     </div>
