--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
             <button class="headerbutton" type="button"><strong>Sign up</strong></button>
-        <div class="splashimage"><img src="placeholder.png"></div>
+        <div class="splashimage"><img src="./img/lofi.jpg"></div>
         </div>
     </div>
     <div class="info">
